# PySpice

./: .bzrignore  .dir-locals.el  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGES.txt  CONTRIBUTORS.md  MANIFEST.in  README.html  README.rst  README.txt  invoke.yaml  make-release.sh  notes.rst  requirements-dev.txt  requirements.txt  setenv.sh  setup.cfg  setup.py  setup_data.py  start.sh  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: codeql-analysis.yml  pyspice-test.yml
KiCadTools/: CircuitMacros.py  Geometry.py  README.md  Schema.py  Sexpression.py  __init__.py  requirements.txt  test.py
LTspice/: README.md
PySpice/: 1.txt  File.py  HighLevelElement.py  Netlist.py  Pipe.py  RawFile.py  SpiceElement.py  SpiceLibrary.py  SpiceParser.py  Units.py  __init__.py  __init__.py.in  devices.txt  souce-waveforms.txt  st-an1476.cir  st-an1476.py  test_netlist.py  test_pipe.py
PySpice/Cache/: README.md  __init__.py
PySpice/Config/: ConfigInstall.py  logging.yml
PySpice/DeviceLibrary/: __init__.py
PySpice/Doc/: CircuitMacrosGenerator.py  ExampleRstFactory.py  ExampleTools.py  RstFactory.py
PySpice/Export/: Hdf5.py  README.md  __init__.py
PySpice/KiCad/: __init__.py
PySpice/Kicad/: __init__.py  test.py
PySpice/Logging/: Logging.py  __init__.py
PySpice/Math/: Calculus.py  __init__.py
PySpice/Physics/: ElementProperties.py  MaterialProperties.py  PhysicalConstants.py  Resistor.py  SemiConductor.py
PySpice/Plot/: BodeDiagram.py  __init__.py
PySpice/Probe/: Plot.py  WaveForm.py
PySpice/Scripts/: Library.py  cir2py.py  ngspice_check_installation.py  ngspice_post_installation.py  pyspice_post_installation.py
PySpice/Spice/: AnalysisParameters.py  BasicElement.py  DeviceModel.py  EBNFExpressionParser.py  EBNFParser.py  EBNFSpiceParser.py  Element.py  ElementParameter.py  ExpressionGrammar.py  ExpressionModel.py  Expressions.py  FakeDipole.py  HighLevelElement.py  Library.py  Netlist.py  Parser.py  Parser_jmgc.py  RawFile.py  Server.py  Simulation.py  Simulator.py  SpiceGrammar.py  SpiceModel.py  StringTools.py  Tools.py  __init__.py  expressiongrammar.ebnf  spicegrammar.ebnf  unit.py
PySpice/Tools/: EnumFactory.py  File.py  Path.py  PathTools.py  StringTools.py  TextBuffer.py  __init__.py
PySpice/Unit/: SiUnits.py  Unit.py  Units.py  __init__.py
anaconda-recipe/: README.md  build.sh  meta.yaml
doc/logo/: make-logo-png
doc/pelican/: README.md  pelicanconf.py  publishconf.py  tasks.py
doc/sphinx/: Makefile.sphinx  make-html
doc/spice/: data-analysis.txt  devices.txt  fields.txt  simulation.txt  syntax.txt
examples/: BodeDiagram.py  OperationalAmplifier.py  Settings.py  Transformer.py  astable.py  capacitor-inductor.py  diode-dc-curve.py  low-pass-rc-filter.py  low-pass-rlc-filter.py  operational-amplifier.py  readme.rst  resistor-bridge.py  run-examples  todo.txt  transform-less-power-supply.py  transformer.py  transistor.py  voltage-divider.py
examples/.travis/: travis.py
examples/advanced-usages/: gm_id_01v8.csv  index.rst  internal-device-parameters.py  netlist-manipulations.py
examples/analyses/: analyses.py  pole_zero_analysis.py  test_pole_zero.cir  testamp.py  testpz.py  tpz.ckt
examples/basic-usages/: index.rst  netlist-manipulations.py  persitence.py  raw-spice.py  skidl-like.py  subcircuit.py  unit.py
examples/ctia_readout/: ctia_readout.ipynb
examples/data-analysis/: fft.py
examples/diode/: RingModulator.py  diode-characteristic-curve.ipynb  diode-characteristic-curve.py  diode-recovery-time.py  full-wave-rectification.m4  half-wave-rectification.m4  index.rst  rectification.py  ring-modulator.py  voltage-multiplier-circuit.m4  voltage-multiplier.py  zener-characteristic-curve.py
examples/document-generator/: RingModulator.py  full-test.py  kicad-pyspice-example  readme.rst
examples/electricity/: three-phase.py
examples/filter/: low-pass-rc-filter.py  low-pass-rlc-filter.py  rlc-filter.py
examples/fundamental-laws/: index.rst  millman-theorem-with-current-source.m4  millman-theorem.py  thevenin-norton-theorem.py  thévenin-norton-theorem.m4  thévenin-norton-theorem.py  voltage-current-divider.py
examples/kicadrw/: dump-netlist.py
examples/ngspice-shared/: external-source.py  index.rst  ngspice-interpreter.py  readme.rst  voltage-divider.py
examples/operational-amplifier/: OperationalAmplifier-api-brainstorming.py  OperationalAmplifier.py  astable.py  operational-amplifier.py
examples/persistance/: cache.py  (+5 more)
gh-pages/: README.rst  html-rsync-filter.txt  init-gh-pages  update-gh-pages
issues/: issue-107.py  issue-11.py  issue-130.py  issue-133.py  issue-142.py  issue-150.py  issue-157-2.py  issue-157.py  issue-164.py  issue-167.lib  issue-167.py  issue-169.py  issue-172.cir  issue-172.py  issue-182-lf411c.mod  issue-6.py  two-stage-amp.cir
ngspice-shared/: Makefile  test-external-source.c  test-module.py  test.py
notes/: notes.rst
pyspice-discourse-backup/: categories.html  index.html  latest.rss  opensearch.xml  posts.rss  privacy.html  robots.txt  tos.html
spice-examples/: astable.cir  diode-ac.cir  diode.cir  low-pass-rc-filter.cir  low-pass-rc-filter.data  operational-amplifier-model-1.cir  operational-amplifier-model-2.cir  transform-less-power-supply.cir  transistor2.cir
tasks/: __init__.py  anaconda.py  clean.py  doc.py  fix-dunder.py  fix-header.py  git.py  github.py  ngspice.py  release.py  test.py
tools/: CircuitMacrosGenerator.py  ExampleRstFactory.py  RstFactory.py  TikzGenerator.py  bzr2git  check-for-missing-files  check-license  cir2py-libraries  circuit-macros-generator  clean  dump-ast  format-rst-table  generate-rst-api  generate-rst-api.sh  generate-rst-examples  generate-rst-examples.sh  license-model-gpl.py  license-model.py  make-api-doc  make-examples  make-readme  perl-grep  replace  replace-slice  run-pylint.sh  stargazers  test-rst-example  update-tags  upload-to-pypi
unit-test/: test_Units.py
unit-test-todo/: test_file.py  test_float_regexp.py  test_netlist.py  test_pipe.py
(+476 files in other folders)
