# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = PySpice
version = attr: PySpice.__version__
url = https://github.com/FabriceSalvaire/PySpice
# download_url =
project_urls =
    Documentation = https://pyspice.fabrice-salvaire.fr
    Code = https://github.com/FabriceSalvaire/PySpice
    Issue Tracker = https://github.com/FabriceSalvaire/PySpice/issues
    Forum = https://pyspice.discourse.group
license = GPLv3
# license_file =
license_files = LICENSE.txt
author = Fabrice Salvaire
author_email = pyspice@fabrice-salvaire.fr
maintainer = Fabrice Salvaire
maintainer_email = pyspice@fabrice-salvaire.fr
description = Simulate electronic circuit using Python and the Ngspice / Xyce simulators
# long_description = file: README.rst
# , CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst
keywords = ngspice, xyce, spice, berkeley, electronic, circuit, simulation, simulator
classifiers =
    Topic :: Scientific/Engineering
    Intended Audience :: Education
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
platforms = any
# provides =
# requires =
# obsoletes =

[options]
packages = find:
python_requires = >=3.10
setup_require = setuptools
# install_requires should declare the loosest possible dependency versions that are still workable
# https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
    PyYAML>=5.3
    cffi>=1.14
    matplotlib>=3.2
    numpy>=1.18
    ply>=3.11
    scipy>=1.4
    requests>=2.23
zip_safe = False
# Look in MANIFEST.in
include_package_data = True

[options.packages.find]
exclude =
    unit-test

[options.package_data]
PySpice.Config = logging.yml
PySpice.Spice.NgSpice = api.h

[options.entry_points]
console_scripts =
    cir2py = PySpice.Scripts.cir2py:main
    pyspice-post-installation = PySpice.Scripts.pyspice_post_installation:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
# https://flake8.pycqa.org/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
# E226 missing whitespace around arithmetic operator
# E302  expected 2 blank lines
# E303  too many blank lines
# E305 expected 2 blank lines after class or function definition
# E402  module level import not at top of file
ignore = E226, E302, E303, E305, E402

[pylint.message]
# module-naming-style=PascalCase
disable =
  apply-builtin, #W1601
  backtick, #E1605
  bad-inline-option, #I0010
  bad-python3-import, #W1648
  basestring-builtin, #W1602
  buffer-builtin, #W1603
  cmp-builtin, #W1604
  cmp-method, #W1630
  coerce-builtin, #W1605
  coerce-method, #W1614
  comprehension-escape, #W1662
  delslice-method, #W1615
  deprecated-itertools-function, #W1651
  deprecated-operator-function, #W1657
  deprecated-pragma, #I0022
  deprecated-str-translate-call, #W1650
  deprecated-string-function, #W1649
  deprecated-sys-function, #W1660
  deprecated-types-field, #W1652
  deprecated-urllib-function, #W1658
  dict-items-not-iterating, #W1654
  dict-iter-method, #W1620
  dict-keys-not-iterating, #W1655
  dict-values-not-iterating, #W1656
  dict-view-method, #W1621
  div-method, #W1642
  eq-without-hash, #W1641
  exception-escape, #W1661
  exception-message-attribute, #W1645
  execfile-builtin, #W1606
  file-builtin, #W1607
  file-ignored, #I0013
  filter-builtin-not-iterating, #W1639
  fixme, #W0511 spam...
  getslice-method, #W1616
  hex-method, #W1628
  idiv-method, #W1643
  import-star-module-level, #E1609
  indexing-exception, #W1624
  input-builtin, #W1632
  intern-builtin, #W1634
  invalid-name, #C0103 for module name not conforming to snake_case
  invalid-str-codec, #W1646
  locally-disabled, #I0011
  long-builtin, #W1608
  long-suffix, #E1606
  map-builtin-not-iterating, #W1636
  metaclass-assignment, #W1623
  missing-class-docstring, #C0115 spam ...
  missing-function-docstring, #C0116
  missing-module-docstring, #C0114
  next-method-called, #W1622
  next-method-defined, #W1653
  no-absolute-import, #W1618
  no-else-return, #R1705 sometimes it is more readable...
  non-ascii-bytes-literal, #E1610
  nonzero-method, #W1629
  oct-method, #W1627
  old-division, #W1619
  old-ne-operator, #E1607
  old-octal-literal, #E1608
  old-raise-syntax, #E1604
  parameter-unpacking, #E1602
  print-statement, #E1601
  raising-string, #W1625
  range-builtin-not-iterating, #W1638
  raw-checker-failed, #I0001
  raw_input-builtin, #W1609
  rdiv-method, #W1644
  reduce-builtin, #W1610
  reload-builtin, #W1626
  round-builtin, #W1633
  setslice-method, #W1617
  standarderror-builtin, #W1611
  suppressed-message, #I0020
  sys-max-int, #W1647
  too-few-format-args, #E1306
  too-few-public-methods, #R0903
  too-many-arguments, #R0913
  too-many-boolean-expressions, #R0916
  too-many-branches, #R0912
  too-many-format-args, #E1305
  too-many-function-args, #E1121
  too-many-instance-attributes, #R0902
  too-many-lines, #C0302
  too-many-locals, #R0914
  too-many-nested-blocks, #R1702
  too-many-public-methods, #R0904
  too-many-return-statements, #R0911
  too-many-star-expressions, #E0112
  too-many-statements, #R0915
  unichr-builtin, #W1635
  unicode-builtin, #W1612
  unpacking-in-except, #E1603
  use-symbolic-message-instead, #I0023
  useless-suppression, #I0021
  using-cmp-argument, #W1640
  xrange-builtin, #W1613
  xreadlines-attribute, #W1659
  zip-builtin-not-iterating, #W1637

# Enabled messages:
#   abstract-class-instantiated, #E0110
#   abstract-method, #W0223
#   access-member-before-definition, #E0203
#   anomalous-backslash-in-string, #W1401
#   anomalous-unicode-escape-in-string, #W1402
#   arguments-differ, #W0221
#   arguments-out-of-order, #W1114
#   assert-on-string-literal, #W0129
#   assert-on-tuple, #W0199
#   assign-to-new-keyword, #W0111
#   assigning-non-slot, #E0237
#   assignment-from-no-return, #E1111
#   assignment-from-none, #E1128
#   astroid-error, #F0002
#   attribute-defined-outside-init, #W0201
#   bad-classmethod-argument, #C0202
#   bad-except-order, #E0701
#   bad-exception-context, #E0703
#   bad-format-character, #E1300
#   bad-format-string, #W1302
#   bad-format-string-key, #W1300
#   bad-indentation, #W0311
#   bad-mcs-classmethod-argument, #C0204
#   bad-mcs-method-argument, #C0203
#   bad-open-mode, #W1501
#   bad-option-value, #E0012
#   bad-reversed-sequence, #E0111
#   bad-staticmethod-argument, #W0211
#   bad-str-strip-call, #E1310
#   bad-string-format-type, #E1307
#   bad-super-call, #E1003
#   bad-thread-instantiation, #W1506
#   bare-except, #W0702
#   binary-op-exception, #W0711
#   boolean-datetime, #W1502
#   broad-except, #W0703
#   c-extension-no-member, #I1101
#   catching-non-exception, #E0712
#   cell-var-from-loop, #W0640
#   chained-comparison, #R1716
#   class-variable-slots-conflict, #E0242
#   comparison-with-callable, #W0143
#   comparison-with-itself, #R0124
#   condition-evals-to-constant, #R1727
#   confusing-with-statement, #W0124
#   consider-iterating-dictionary, #C0201
#   consider-merging-isinstance, #R1701
#   consider-swap-variables, #R1712
#   consider-using-dict-comprehension, #R1717
#   consider-using-enumerate, #C0200
#   consider-using-generator, #R1728
#   consider-using-get, #R1715
#   consider-using-in, #R1714
#   consider-using-join, #R1713
#   consider-using-max-builtin, #R1731
#   consider-using-min-builtin, #R1730
#   consider-using-set-comprehension, #R1718
#   consider-using-sys-exit, #R1722
#   consider-using-ternary, #R1706
#   consider-using-with, #R1732
#   continue-in-finally, #E0116
#   cyclic-import, #R0401
#   dangerous-default-value, #W0102
#   deprecated-argument, #W1511
#   deprecated-method, #W1505
#   deprecated-module, #W0402
#   dict-iter-missing-items, #E1141
#   disallowed-name, #C0104
#   duplicate-argument-name, #E0108
#   duplicate-bases, #E0241
#   duplicate-code, #R0801
#   duplicate-except, #W0705
#   duplicate-key, #W0109
#   duplicate-string-formatting-argument, #W1308
#   empty-docstring, #C0112
#   eval-used, #W0123
#   exec-used, #W0122
#   expression-not-assigned, #W0106
#   f-string-without-interpolation, #W1309
#   fatal, #F0001
#   format-combined-specification, #W1305
#   format-needs-mapping, #E1303
#   function-redefined, #E0102
#   global-at-module-level, #W0604
#   global-statement, #W0603
#   global-variable-not-assigned, #W0602
#   global-variable-undefined, #W0601
#   implicit-str-concat, #W1404
#   import-error, #E0401
#   import-outside-toplevel, #C0415
#   import-self, #W0406
#   inconsistent-mro, #E0240
#   inconsistent-quotes, #W1405
#   inconsistent-return-statements, #R1710
#   inherit-non-class, #E0239
#   init-is-generator, #E0100
#   invalid-all-object, #E0604
#   invalid-bool-returned, #E0304
#   invalid-bytes-returned, #E0308
#   invalid-characters-in-docstring, #C0403
#   invalid-envvar-default, #W1508
#   invalid-envvar-value, #E1507
#   invalid-format-index, #W1307
#   invalid-format-returned, #E0311
#   invalid-getnewargs-ex-returned, #E0313
#   invalid-getnewargs-returned, #E0312
#   invalid-hash-returned, #E0309
#   invalid-index-returned, #E0305
#   invalid-length-hint-returned, #E0310
#   invalid-length-returned, #E0303
#   invalid-metaclass, #E1139
#   invalid-overridden-method, #W0236
#   invalid-repr-returned, #E0306
#   invalid-sequence-index, #E1126
#   invalid-slice-index, #E1127
#   invalid-slots, #E0238
#   invalid-slots-object, #E0236
#   invalid-star-assignment-target, #E0113
#   invalid-str-returned, #E0307
#   invalid-unary-operand-type, #E1130
#   isinstance-second-argument-not-valid-type, #W1116
#   keyword-arg-before-vararg, #W1113
#   len-as-condition, #C1801
#   line-too-long, #C0301
#   literal-comparison, #R0123
#   logging-format-interpolation, #W1202
#   logging-format-truncated, #E1201
#   logging-fstring-interpolation, #W1203
#   logging-not-lazy, #W1201
#   logging-too-few-args, #E1206
#   logging-too-many-args, #E1205
#   logging-unsupported-format, #E1200
#   lost-exception, #W0150
#   method-check-failed, #F0202
#   method-hidden, #E0202
#   misplaced-bare-raise, #E0704
#   misplaced-comparison-constant, #C0122
#   misplaced-format-function, #E0119
#   misplaced-future, #W0410
#   missing-final-newline, #C0304
#   missing-format-argument-key, #W1303
#   missing-format-attribute, #W1306
#   missing-format-string-key, #E1304
#   missing-kwoa, #E1125
#   missing-parentheses-for-call-in-test, #W0126
#   mixed-format-string, #E1302
#   mixed-line-endings, #C0327
#   multiple-imports, #C0410
#   multiple-statements, #C0321
#   nan-comparison, #W0177
#   no-classmethod-decorator, #R0202
#   no-else-break, #R1723
#   no-else-continue, #R1724
#   no-else-raise, #R1720
#   no-init, #W0232
#   no-member, #E1101
#   no-method-argument, #E0211
#   no-name-in-module, #E0611
#   no-self-argument, #E0213
#   no-self-use, #R0201
#   no-staticmethod-decorator, #R0203
#   no-value-for-parameter, #E1120
#   non-ascii-name, #C0144
#   non-iterator-returned, #E0301
#   non-parent-init-called, #W0233
#   non-str-assignment-to-dunder-name, #W1115
#   nonexistent-operator, #E0107
#   nonlocal-and-global, #E0115
#   nonlocal-without-binding, #E0117
#   not-a-mapping, #E1134
#   not-an-iterable, #E1133
#   not-async-context-manager, #E1701
#   not-callable, #E1102
#   not-context-manager, #E1129
#   not-in-loop, #E0103
#   notimplemented-raised, #E0711
#   parse-error, #F0010
#   pointless-statement, #W0104
#   pointless-string-statement, #W0105
#   possibly-unused-variable, #W0641
#   preferred-module, #W0407
#   property-with-parameters, #R0206
#   protected-access, #W0212
#   raise-missing-from, #W0707
#   raising-bad-type, #E0702
#   raising-format-tuple, #W0715
#   raising-non-exception, #E0710
#   redeclared-assigned-name, #W0128
#   redefine-in-handler, #W0623
#   redefined-argument-from-local, #R1704
#   redefined-builtin, #W0622
#   redefined-outer-name, #W0621
#   redundant-keyword-arg, #E1124
#   redundant-unittest-assert, #W1503
#   reimported, #W0404
#   relative-beyond-top-level, #E0402
#   repeated-keyword, #E1132
#   return-arg-in-generator, #E0106
#   return-in-init, #E0101
#   return-outside-function, #E0104
#   self-assigning-variable, #W0127
#   self-cls-assignment, #W0642
#   shallow-copy-environ, #W1507
#   signature-differs, #W0222
#   simplifiable-condition, #R1726
#   simplifiable-if-expression, #R1719
#   simplifiable-if-statement, #R1703
#   simplify-boolean-expression, #R1709
#   single-string-used-for-slots, #C0205
#   singleton-comparison, #C0121
#   star-needs-assignment-target, #E0114
#   stop-iteration-return, #R1708
#   subprocess-popen-preexec-fn, #W1509
#   subprocess-run-check, #W1510
#   super-init-not-called, #W0231
#   super-with-arguments, #R1725
#   superfluous-parens, #C0325
#   syntax-error, #E0001
#   too-many-ancestors, #R0901
#   trailing-comma-tuple, #R1707
#   trailing-newlines, #C0305
#   trailing-whitespace, #C0303
#   truncated-format-string, #E1301
#   try-except-raise, #W0706
#   unbalanced-tuple-unpacking, #W0632
#   undefined-all-variable, #E0603
#   undefined-loop-variable, #W0631
#   undefined-variable, #E0602
#   unexpected-keyword-arg, #E1123
#   unexpected-line-ending-format, #C0328
#   unexpected-special-method-signature, #E0302
#   ungrouped-imports, #C0412
#   unhashable-dict-key, #E1140
#   unidiomatic-typecheck, #C0123
#   unnecessary-comprehension, #R1721
#   unnecessary-lambda, #W0108
#   unnecessary-pass, #W0107
#   unnecessary-semicolon, #W0301
#   unneeded-not, #C0113
#   unpacking-non-sequence, #E0633
#   unreachable, #W0101
#   unrecognized-inline-option, #E0011
#   unsubscriptable-object, #E1136
#   unsupported-assignment-operation, #E1137
#   unsupported-binary-operation, #E1131
#   unsupported-delete-operation, #E1138
#   unsupported-membership-test, #E1135
#   unused-argument, #W0613
#   unused-format-string-argument, #W1304
#   unused-format-string-key, #W1301
#   unused-import, #W0611
#   unused-variable, #W0612
#   unused-wildcard-import, #W0614
#   use-a-generator, #R1729
#   used-before-assignment, #E0601
#   used-prior-global-declaration, #E0118
#   useless-else-on-loop, #W0120
#   useless-import-alias, #C0414
#   useless-object-inheritance, #R0205
#   useless-return, #R1711
#   useless-super-delegation, #W0235
#   using-constant-test, #W0125
#   wildcard-import, #W0401
#   wrong-exception-operation, #W0716
#   wrong-import-order, #C0411
#   wrong-import-position, #C0413
#   wrong-spelling-in-comment, #C0401
#   wrong-spelling-in-docstring, #C0402
#   yield-inside-async-function, #E1700
#   yield-outside-function, #E0105
