# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = PySpice
version = attr: PySpice.__version__
url = https://github.com/FabriceSalvaire/PySpice
# download_url =
project_urls =
    Documentation = https://pyspice.fabrice-salvaire.fr
    Code = https://github.com/FabriceSalvaire/PySpice
    Issue Tracker = https://github.com/FabriceSalvaire/PySpice/issues
    Forum = https://pyspice.discourse.group
license = GPLv3
# license_file =
license_files = LICENSE.txt
author = Fabrice Salvaire
author_email = pyspice@fabrice-salvaire.fr
maintainer = Fabrice Salvaire
maintainer_email = pyspice@fabrice-salvaire.fr
description = Simulate electronic circuit using Python and the Ngspice / Xyce simulators
# long_description = file: README.rst
# , CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst
keywords = ngspice, xyce, spice, berkeley, electronic, circuit, simulation, simulator
classifiers =
    Topic :: Scientific/Engineering
    Intended Audience :: Education
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
platforms = any
# provides =
# requires =
# obsoletes =

[options]
packages = find:
python_requires = >=3.10
setup_require = setuptools
# install_requires should declare the loosest possible dependency versions that are still workable
# https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
    PyYAML>=5.3
    cffi>=1.14
    matplotlib>=3.2
    numpy>=1.18
    ply>=3.11
    scipy>=1.4
    requests>=2.23
zip_safe = False
# Look in MANIFEST.in
include_package_data = True

[options.packages.find]
exclude =
    unit-test

[options.package_data]
PySpice.Config = logging.yml
PySpice.Spice.NgSpice = api.h

[options.entry_points]
console_scripts =
    cir2py = PySpice.Scripts.cir2py:main
    pyspice-post-installation = PySpice.Scripts.pyspice_post_installation:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
# https://flake8.pycqa.org/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
# E226 missing whitespace around arithmetic operator
# E302  expected 2 blank lines
# E303  too many blank lines
# E305 expected 2 blank lines after class or function definition
# E402  module level import not at top of file
ignore = E226, E302, E303, E305, E402, ANN101

[pylint.message]
# module-naming-style=PascalCase
max-line-length = 120
disable =
	disallowed-name,
	fixme,
	import-outside-toplevel,
	invalid-name,
	missing-class-docstring,
	missing-function-docstring,
	missing-module-docstring,
	no-else-raise,
	no-else-return,
	non-ascii-module-import,
	protected-access,
	too-many-arguments,
	too-many-instance-attributes,
	too-many-lines,
	too-many-public-methods,
	too-many-return-statements,
	unused-argument,
	wrong-import-order,
	wrong-import-position,
	 no-member

# no-name-in-module
# unused-variable
# use-dict-literal

[pycodestyle]
max-line-length = 120
ignore =
       E265,
       E305,
       E402
